<resources>
    <string name="app_name">KBC 2020</string>
    <string name="play_now">Play Now</string>
    <string name="select_language">Language</string>
    <string name="language_hindi">Hindi</string>
    <string name="language_english">English</string>
    <string name="language_hindi_button">Lang: HIN</string>
    <string name="language_english_button">Lang: ENG</string>
    <string name="sound_on_off">Sound Selection</string>
    <string name="fifty_fifty">50-50</string>
    <string name="flip_question">Flip</string>
    <string name="audience_poll">Audience</string>
    <string name="phone_of_friend">phone</string>
    <string name="you_won">You Won!!</string>
    <string name="oops">oops!!</string>
    <string name="exitMain">Exit</string>
    <string name="soundOn">SoundOn</string>
    <string name="soundOnText">Sound:On</string>
    <string name="soundOff">SoundOff</string>
    <string name="soundOffText">Sound:Off</string>
    <string name="highScore">High Score</string>
    <string name="accuracy60">Accuracy of this answer is 60% Watch Ad for 100% accurate \n click on Telephone logo</string>
    <string name="accuracy100">Now this is your correct answer</string>
    <string name="wrongAns">Stay connected to internet to make your record worldwide</string>
    <string name="wrongAnsAd">Watch Ad to get one More chance</string>
    <string name="internetConnection">Check your internet connection...</string>
    <string name="firstRecord">Be first one to make your Record worldwide</string>

    <string name="loadigWait">Please Wait while Loading</string>

    <string name="testInterestial">ca-app-pub-3940256099942544/1033173712</string>
    <string name="languageInterestial">ca-app-pub-9531546526616195/5194150307</string>
    <string name="soundInterestial">ca-app-pub-9531546526616195/1254905291</string>
    <string name="exitInterestial">ca-app-pub-9531546526616195/9133395314</string>
    <string name="onLostInterestial">ca-app-pub-9531546526616195/1327079566</string>
    <string name="phoneOfFriendRewarded">ca-app-pub-9531546526616195/4803642766</string>
    <string name="playAgain">ca-app-pub-9531546526616195/1459348020</string>


    <string name="exitInterstitialFacebook">213237363119671_213263143117093</string>
    <string name="languageInterstitialFacebook">213237363119671_213263586450382</string>
    <string name="soundInterstitialFacebook">213237363119671_213264453116962</string>
    <string name="playAgainRewardedFacebook">213237363119671_214260839683990</string>
    <string name="onLostInterstitialFacebook">213237363119671_213241556452585</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



</resources>
