<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HighScoreTop.WeeklyTop">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerview_in_daily_top"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:id="@+id/progress_loading_layout"
        >
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar_daily"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loadigWait"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="25sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_red_white"
        android:id="@+id/no_internet_connection"
        android:layout_gravity="center"
        android:visibility="gone"
        android:padding="30dp"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="No Internet Connection"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/internetConnection"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:textColor="@color/red"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_red_white"
        android:id="@+id/no_item"
        android:visibility="gone"
        android:layout_gravity="center"
        android:padding="30dp"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="No Record Yet"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstRecord"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:textColor="@color/red"
            />



    </LinearLayout>

</FrameLayout>