<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/play_game_context"
    android:background="@drawable/background_gradient"
    tools:context=".PlayGame">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="424dp"
        android:layout_height="207dp"
        android:layout_marginStart="112dp"
        android:src="@drawable/kbc2020_min"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.881" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="658dp"
        android:layout_height="55dp"
        android:background="@drawable/main_button_gradient"
        android:gravity="center"
        android:elevation="1dp"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.566">

        <TextView
            android:id="@+id/question_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.467"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.566" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_option1"
        android:layout_width="291dp"
        android:layout_height="40dp"
        android:background="@drawable/main_button_gradient"
        android:gravity="center"
        android:onClick="ClickAnswer"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/layout_option2"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.776">

        <TextView
            android:id="@+id/option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="291dp"
        android:layout_height="40dp"
        android:background="@drawable/main_button_gradient"
        android:gravity="center"
        android:orientation="vertical"
        android:onClick="ClickAnswer"
        android:id="@+id/layout_option2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.962"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.776">

        <TextView
            android:id="@+id/option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_option3"
        android:layout_width="291dp"
        android:layout_height="40dp"
        android:background="@drawable/main_button_gradient"
        android:gravity="center"
        android:onClick="ClickAnswer"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/layout_option4"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936">

        <TextView
            android:id="@+id/option3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="291dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="vertical"
        android:onClick="ClickAnswer"
        android:id="@+id/layout_option4"
        android:background="@drawable/main_button_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.962"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936">

        <TextView
            android:id="@+id/option4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
             />
    </LinearLayout>

    <ImageView
        android:id="@+id/quit_match"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:onClick="QuitMatch"
        android:src="@drawable/quit_match"
        android:text="@string/audience_poll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002" />

    <ImageView
        android:id="@+id/fifty_fifty"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:background="@drawable/lifeline_background"
        android:src="@drawable/fifty_icon"
        android:text="@string/fifty_fifty"
        android:onClick="FiftyFiftyFunctionality"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191" />

    <ImageView
        android:id="@+id/audience_poll"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:background="@drawable/lifeline_background"
        android:onClick="AudiencePollFunctionality"
        android:src="@drawable/audience_icon1"
        android:text="@string/audience_poll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191" />

    <ImageView
        android:id="@+id/flip_question"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:background="@drawable/lifeline_background"
        android:onClick="FlipQuestionFunctionality"
        android:src="@drawable/flip_icon1"
        android:text="@string/flip_question"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.752"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191" />

    <ImageView
        android:id="@+id/phone_of_friend"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:background="@drawable/lifeline_background"
        android:onClick="PhoneOfFriendFunctionality"
        android:src="@drawable/pof_icon1"
        android:text="@string/phone_of_friend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191" />

    <TextView
        android:id="@+id/show_reward_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/lifeline_background"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="₹"
        android:visibility="gone"
        android:textColor="@color/golden"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/phone_of_friend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/countdownTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/main_button_gradient"
        android:paddingTop="10dp"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:paddingBottom="30dp"
        android:text="45"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />


</androidx.constraintlayout.widget.ConstraintLayout>